k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: elizabethdeleonlantean/frontend:v2
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: frontend-tls
              mountPath: /etc/nginx/ssl
              readOnly: true
      volumes:
        - name: frontend-tls
          secret:
            secretName: frontend-tls
